# PythonBindingCodes

./: README.md
frameworks/C/: README.md  fputsmodule.c  setup.py
frameworks/Pytorch/: demo.py  test.py
frameworks/Pytorch/lltm-extension/: lltm.cpp  setup.py
frameworks/pybind11/: .gitignore
frameworks/pybind11/examples/: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py  test.py
frameworks/pybind11/examples/src/: example.cc  ndarray_converter.cc  ndarray_converter.hh
frameworks/pybind11/pyglue/: CMakeLists.txt  README.md
frameworks/pybind11/pyglue/example/: __init__.py  setup.py
frameworks/pybind11/pyglue/src/: example.cc
frameworks/pybind11/pyglue/tutorials/pipcudemo/: CMakeLists.txt  myCuda.cu  myCuda.cuh  mylib.h  setup.py  testDriver.cpp
frameworks/pybind11/pyglue/tutorials/pipcudemo/pipcudemo/: __init__.py  core.cpp
